<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dip"
        android:layout_marginBottom="8dip"
        android:textSize="18sp"
        android:text="@string/q1_e"
    />
    <Button android:id="@+id/yes_button"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:padding="20dip"
        android:layout_marginBottom="8dip"
        android:text="@string/yes">
        <requestFocus />
    </Button>
     <Button android:id="@+id/no_button"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:padding="20dip"
        android:layout_marginBottom="8dip"
        android:text="@string/no">
         <requestFocus />
    </Button>
</LinearLayout>
