<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dip"
         android:textSize="18sp"
         android:layout_marginBottom="8dip"
        android:text="@string/choose_q"
    />
    <Button android:id="@+id/now_button"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:textSize="15sp"
        android:padding="20dip"
        android:layout_marginBottom="8dip"
        android:text="@string/now">
        <requestFocus />
    </Button>
     <Button android:id="@+id/later_button"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:textSize="15sp"
        android:padding="20dip"
        android:layout_marginBottom="8dip"
        android:text="@string/later">
         <requestFocus />
    </Button>
</LinearLayout>
